# asset-vision

./: .gitignore  CHECKLIST.md  INSTALL.md  LAUNCH_GUIDE.md  LICENSE  Makefile  README.md  USAGE.md  WINDOWS.md  capture.py  config.example.yaml  config.yaml  detector.py  generate_samples.py  pipeline.py  pyproject.toml  qrtools.py  requirements-ci.txt  requirements.txt  setup.py  start.sh  store.py  test_import.py  test_manager.py
.claude/: launch.json
.github/workflows/: ci.yml
asset_vision/: __init__.py  capture.py  detector.py  pipeline.py  qrtools.py  store.py
asset_ws/src/asset_interfaces/: CMakeLists.txt  package.xml
asset_ws/src/asset_interfaces/msg/: AssetDetections.msg  DetectedAsset.msg
asset_ws/src/asset_interfaces/srv/: QueryInventory.srv
asset_ws/src/asset_perception/: package.xml  setup.py
asset_ws/src/asset_perception/asset_perception/: camera_node.py  manager_node.py  perception_node.py
asset_ws/src/asset_perception/launch/: asset_system.launch.py
asset_ws/src/asset_perception/rviz/: asset.rviz
docs/: CAMERA_SOURCES.md  LINKEDIN_POST_2.md  SWOT.md
scripts/: install.ps1  install.sh  run.ps1  run.sh
tests/: conftest.py  test_qrtools.py  test_store.py
web/: app.py
web/static/: style.css
web/templates/: index.html  register.html
