[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-vision"
version = "0.2.0"
description = "Computer-vision inventory scanner: YOLOv8 + QR tags + SQLite + ROS2"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SaladinIART", email = "asset-vision@users.noreply.github.com" }]
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.2.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "opencv-python-headless>=4.9.0",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=7.4.2",
    "Pillow>=10.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/SaladinIART/asset-vision"
Repository = "https://github.com/SaladinIART/asset-vision"

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_vision*"]
